--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240923T094444Z
+"   /golfscore                                      20240923T095943Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/275708.html">What kind of Fibonacci subword at this offset?  : 0275708</a>
 <a href="q/275590.html">Play the Final Fantasy Prelude                  : 0275590</a>
 <a href="q/247234.html">Random Pixels Image Compression                 : 0247234</a>
 <a href="q/275689.html">Tic-tac-toe encode them all                     : 0275689</a>
