--- a/q/275590.html
+++ b/q/275590.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>2962</td><td>Zsh +ffplay</td><td>240923T094444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275717#275717">roblogic</a></td></tr>
+<tr d-ix="0"><td>2512</td><td>Zsh +ffplay</td><td>240923T094444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275717#275717">roblogic</a></td></tr>
 <tr d-ix="1"><td>324</td><td>JavaScript</td><td>240920T204734Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275664#275664">rougepie</a></td></tr>
 <tr d-ix="2"><td>174</td><td>C GCC using OSS</td><td>240921T162403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275674#275674">G. Sliep</a></td></tr>
 <tr d-ix="3"><td>320</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
@@ -37,17 +37,17 @@
 <tr d-ix="8"><td>290</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
 <tr d-ix="9"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +<a href="https://www.ffmpeg.org/ffplay.html" rel="nofollow noreferrer"><code>ffplay</code></a>, 296 bytes x 2</h1>
-<pre class="lang-none prettyprint-override"><code>for i (`fold -1&lt;&lt;&lt;79be467b79be467b0247246937ae59c` 10)A+=($[16#$i-7])
-for k ({0..7}){O=(${A:$k*4:4}) W=;for i ({0..3})for j ({1..4})W+=($[$O[j]+12*i])
-for q (${W:0:-1} ${(Oa)W})f=$[440*2**(($q-21)/12.)]&amp;&amp;S=$S&quot;between(t,&quot;$[p++]&quot;/7,$p/7)*$f+&quot;;}
-ffplay -f lavfi aevalsrc=&quot;'0.1*sin(2*PI*t*(${S%+}))'&quot;
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +<a href="https://www.ffmpeg.org/ffplay.html" rel="nofollow noreferrer"><code>ffplay</code></a>, <sub><s>296</s></sub> 251 bytes x 2</h1>
+<pre class="lang-none prettyprint-override"><code>for z (`fold -4&lt;&lt;&lt;79be467b79be467b0247246937ae59cg`){W=
+for i ({0..3})for o (${(s::)z})W+=($[16#${o/g/10}-7+12*i])
+for q (${W:0:-1} ${(Oa)W})S=$S\between(t,$[p++]/7,$p/7)*$[440*2**(($q-21)/12.)]+
+};ffplay -f lavfi aevalsrc=&quot;'0.1*sin(2*PI*t*(${S%+}))'&quot;
 </code></pre>
-<p><a href="https://tio.run/##NY89b4MwGIT3/AqLuoltwocdFwsCQ8ZOVGJgQEgx1FZIUCAhStUifjuBNp1Op3vf53Q/3WGUdSU7oHVby@9IlYdm1M0VVADtdVN/AouGYSj8QnFPFP/qMi4Y9/yNkOrNL/eAunhnRghm1HuBlSVyvJgpJ4B617bFgPt4SvtdAE@EB3zAII22z575YjPg2R0nR217ytNfGoyzY25SRqon8AImShq4gUUHAHsUS5xOrxHMOHcJIwQheLEYxQ5lNs6XyySCiVGo25dSZ3RbGzBrTTM3HLGGrSMwgdo0tsPibz6wNKjlXVdAqrusu2sZGSvXpqSrzoiRj3dyI1N/8moOGK@McXwA" rel="nofollow noreferrer" title="Zsh – Try It Online">Try it online!</a></p>
-<p><code>for i</code> unrolls hex string into sequence of 8 octaves (array <code>A</code>, 32 notes)<br>
-<code>for k</code> takes 4 elements of <code>A</code> into octave array <code>O</code><br>
-  <code>for i</code> and <code>for j</code> build array <code>W</code> with 16 note numbers<br>
-<code>for q</code> iterates up and down <code>W</code> turning each note <code>q</code> into a frequency <code>f</code> (Hz). This in turn is used to build string <code>S</code> which is later passed to <code>ffplay</code>.</p>
+<p><a href="https://tio.run/##NY/daoMwAIXv@xShy2h@qiZpZtDpA@xqAy@8cEKjS1pBqq3SsUqe3dWOXR0@OB@HcxuOs24bPQBr@1b/pKY@drPtLuAG0N527RfwZJIkKqqMDFX1n0xIJWQY7ZQ2L1F92OMpT1eL1wA0Md/fObxQBxCc0BDH@OZwTlMECx4@wakLDgFnzlOUC9KU@KGel3Ies9jjDty1d41zh7MUZp@VGb@NOaFxC4ue0jJQW9gHChNYSMmIIAQhePYExwEXPi7pyr3@PQKeBa2@2gZoc9XtcKnT9Yb5nAzNCQny8UZGcp/NnqnDeLOe518" rel="nofollow noreferrer">Try it online!</a>
+<sub><s><a href="https://tio.run/##NY89b4MwGIT3/AqLuoltwocdFwsCQ8ZOVGJgQEgx1FZIUCAhStUifjuBNp1Op3vf53Q/3WGUdSU7oHVby@9IlYdm1M0VVADtdVN/AouGYSj8QnFPFP/qMi4Y9/yNkOrNL/eAunhnRghm1HuBlSVyvJgpJ4B617bFgPt4SvtdAE@EB3zAII22z575YjPg2R0nR217ytNfGoyzY25SRqon8AImShq4gUUHAHsUS5xOrxHMOHcJIwQheLEYxQ5lNs6XyySCiVGo25dSZ3RbGzBrTTM3HLGGrSMwgdo0tsPibz6wNKjlXVdAqrusu2sZGSvXpqSrzoiRj3dyI1N/8moOGK@McXwA" rel="nofollow noreferrer" title="Zsh – Try It Online">Try it online!</a></s></sub></p>
+<p><code>for z</code> grabs 4 pseudo-hex characters<br>
+<code>for i</code> and <code>for o</code> populate array <code>W</code> with 16 notes based on <code>z</code><br>
+<code>for q</code> iterates up and down <code>W</code> turning each note <code>q</code> into a frequency <code>f=$[440*2**(($q-21)/12.)]</code> (Hz). This in turn is used to build string <code>S</code> which is later passed to <code>ffplay</code>.</p>
 <p>The linked TIO example doesn't play sound (no <code>ffplay</code>), but you can see the humungous string <code>S</code></p>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript, 324 bytes</h1>
