--- a/q/275697.html
+++ b/q/275697.html
@@ -26,11 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>033</td><td>Charcoal</td><td>240923T084717Z</td><td><a href="https://codegolf.stackexchange.com/questions/275697/figure-out-which-of-your-friends-reveals-confidential-information-to-the-media/275713#275713">Neil</a></td></tr>
-<tr d-ix="1"><td>021</td><td>05AB1E</td><td>240923T083207Z</td><td><a href="https://codegolf.stackexchange.com/questions/275697/figure-out-which-of-your-friends-reveals-confidential-information-to-the-media/275712#275712">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>050</td><td>JavaScript Node.js</td><td>240922T225207Z</td><td><a href="https://codegolf.stackexchange.com/questions/275697/figure-out-which-of-your-friends-reveals-confidential-information-to-the-media/275698#275698">l4m2</a></td></tr>
+<tr d-ix="0"><td>020</td><td>MATL</td><td>240923T103216Z</td><td><a href="https://codegolf.stackexchange.com/questions/275697/figure-out-which-of-your-friends-reveals-confidential-information-to-the-media/275720#275720">Luis Men</a></td></tr>
+<tr d-ix="1"><td>033</td><td>Charcoal</td><td>240923T084717Z</td><td><a href="https://codegolf.stackexchange.com/questions/275697/figure-out-which-of-your-friends-reveals-confidential-information-to-the-media/275713#275713">Neil</a></td></tr>
+<tr d-ix="2"><td>021</td><td>05AB1E</td><td>240923T083207Z</td><td><a href="https://codegolf.stackexchange.com/questions/275697/figure-out-which-of-your-friends-reveals-confidential-information-to-the-media/275712#275712">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>050</td><td>JavaScript Node.js</td><td>240922T225207Z</td><td><a href="https://codegolf.stackexchange.com/questions/275697/figure-out-which-of-your-friends-reveals-confidential-information-to-the-media/275698#275698">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 33 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 20 bytes</h1>
+<pre><code>t f y 32=f iB ) hS )
+</code></pre>
+<p><a href="https://tio.run/##y00syfn/v0QhTaFSwdjINk0h00lBUyEjWEHz/391j9SiVIXMYoX8vFSF1IrE3IKcVIXyzJIMBXOF4oLE5NRiPYXg1LLUPEV1LiMjAA" rel="nofollow noreferrer" title="MATL – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 33 bytes</h1>
 <pre><code>Ｎθ¿ ¿ ¿ ¿ ¿ ⭆η⎇›ι ι… ⊕﹪÷θＸ²№…ηκ ²
 </code></pre>
 <p><a href="https://tio.run/##jY2xDoIwFEV3v@LJ1CbVgcWBERNlwJDgD9TylMbSllJAvr4WHVx9y73DO@eKljthuAqh0Hb0l7G7oSM9zTbyDiSBhMI/pXJSe1L7GI@SW9IyuKLT3C3k5JD76JQM1lcGseSLUJi3xq40g0ILhx1qjw0pTTMqQwrtj3KSDZKeQWXmKEgjZ8Y486PjzJN@vTRmSj@XhZCmmzM6BDmA0Qj44p1VCLP0LRxgsFzgsIcaJ9TbsJvUGw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -44,7 +50,7 @@
 </code></pre>
 <p>Map over the message, replacing characters that are not greater than one or two spaces (this always covers the rest of printable ASCII) with one or two spaces truncated or cyclically extended to one or two spaces according to the next least significant bit of the input number. The bit index is found by counting spaces so far so this has to be the eighth space for that to work correctly (adding a two byte filler is golfier than any other way of working around it).</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>24</s> 21 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>24</s> 21 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>.γ ð Q } I b € 0ÅÏº}J
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f9f79xmhcMbFAIVahU8FZIUHjWtUTA43Hq4/9CuWi/8slxGRgA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/X@xyc3PXknhUdskBSX7/3rnNisc3qAQqFCr4KeQpPCoaY2CweHWw/2HdtV6/ddBlvZElwYA" rel="nofollow noreferrer">verify all test cases</a>.</p>
@@ -62,7 +68,7 @@
 </code></pre>
 <p>The no-op spaces to comply to the challenge rules can be added anywhere in the code, except between the <code>.γ</code> and <code>ÅÏ</code>, since those are single 2-byte builtins.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 50 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 50 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x =&gt; n =&gt; x . replace (/ /g,c=&gt;n&amp;2**i++?c+c:c,i=0)
 </code></pre>
