--- a/q/275708.html
+++ b/q/275708.html
@@ -26,9 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>030</td><td>05AB1E</td><td>240923T095642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275708/what-kind-of-fibonacci-subword-at-this-offset/275718#275718">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>121</td><td>JavaScript ES6</td><td>240923T103031Z</td><td><a href="https://codegolf.stackexchange.com/questions/275708/what-kind-of-fibonacci-subword-at-this-offset/275719#275719">Arnauld</a></td></tr>
+<tr d-ix="1"><td>030</td><td>05AB1E</td><td>240923T095642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275708/what-kind-of-fibonacci-subword-at-this-offset/275718#275718">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 30 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 121 bytes</h1>
+<p>Expects <code>(N,n,o)</code> and returns <strong>0</strong> for <em>regular</em>, <strong>1</strong> for <em>strange</em>, <strong>3</strong> for <em>wrong</em>.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>(N,n,o)=&gt;(g=(m,x=&quot;a&quot;,y=&quot;b&quot;,i)=&gt;i^N?g(m,~i+n?y:y=p=y.toUpperCase(),x+y,-~i):!x.slice(o).match(eval(`/^${p}/`+m)))``|g`i`*2
+</code></pre>
+<p><a href="https://tio.run/##rdGxTsMwEAbgnacwEYNNrklst0StZDqwd2OtbIJrjBI7SkJpBPTVQ5ZWqlQFD6ynT/f/untXe9UWja27mfOvetiJAW/AgSfiERuBKziISEXQi@glAjtO7XazNuP8aGO37le9qEWfdP65rnXzpFqNCRziHmZHS1a3h6QtbaGxJ0mluuIN670qsUy3d1/1TyrjihAi5beRVt6zofCu9aVOSm/wDtMMEAOUI0QISlP02Xhnbi5NDghxQNnJNNp8lKq5rs6b2q5RzujrahmQR7OQPEonNtH5WAjQPJ/sdFbLAMX54v/UQ0jigvIARbPszzuwAMMDDOWTnzkpxgMU4yGKM3ahhl8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 30 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>1ÝλN¹›i‚»ë«]¹I‚è`IF¦¶Û}Dþ‚sδÅ?
 </code></pre>
 <p>Inputs in the order <span class="math-container">\$n,N,o\$</span>. Outputs <code>[1,1]</code> for regular; <code>[0,1]</code> for strange; and <code>[0,0]</code> for wrong.</p>
