--- a/q/247234.html
+++ b/q/247234.html
@@ -26,18 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>274</td><td>Python 3.12 with PIL and random</td><td>240923T093517Z</td><td><a href="https://codegolf.stackexchange.com/questions/247234/random-pixels-image-compression/275716#275716">David Ch</a></td></tr>
+<tr d-ix="0"><td>273</td><td>Python 3.12 with PIL and random</td><td>240923T093517Z</td><td><a href="https://codegolf.stackexchange.com/questions/247234/random-pixels-image-compression/275716#275716">David Ch</a></td></tr>
 <tr d-ix="1"><td>196</td><td>Yabasic</td><td>220520T013401Z</td><td><a href="https://codegolf.stackexchange.com/questions/247234/random-pixels-image-compression/247568#247568">Taylor R</a></td></tr>
 <tr d-ix="2"><td>093</td><td>Wolfram Language Mathematica</td><td>220516T042550Z</td><td><a href="https://codegolf.stackexchange.com/questions/247234/random-pixels-image-compression/247368#247368">alephalp</a></td></tr>
 <tr d-ix="3"><td>091</td><td>J</td><td>220516T024403Z</td><td><a href="https://codegolf.stackexchange.com/questions/247234/random-pixels-image-compression/247360#247360">Jonah</a></td></tr>
 <tr d-ix="4"><td>296</td><td>C GCC</td><td>220513T151235Z</td><td><a href="https://codegolf.stackexchange.com/questions/247234/random-pixels-image-compression/247260#247260">matteo_c</a></td></tr>
 <tr d-ix="5"><td>334</td><td>JavaScript browser</td><td>220513T194748Z</td><td><a href="https://codegolf.stackexchange.com/questions/247234/random-pixels-image-compression/247274#247274">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.12/" rel="nofollow noreferrer">Python 3.12</a> (with PIL and random), 274 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.12/" rel="nofollow noreferrer">Python 3.12</a> (with PIL and random), <s>274</s> 273 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>import PIL,random;r,a=random.randint,range
-def f(n,L=0):v=PIL.Image.new('1',(n,n));v.putdata(L:=[[[0,r(0,1),1][((t:=L[u:=i*2+j*(m:=2*n)*2]+L[u+1]+L[u+m]+L[u+m+1])&gt;=2)+(t&gt;2)]for j in a(n)for i in a(n)if L],[r(0,1)for i in a(n**2)]][L==0]);v.save(f'{n}.png')or n&lt;2or f(n//2,L)
+def f(n,L=0):v=PIL.Image.new('1',(n,n));v.putdata(L:=[[[0,r(0,1),1][((t:=L[u:=i*2+j*(m:=2*n)*2]+L[u+1]+L[u+m]+L[u-~m])&gt;=2)+(t&gt;2)]for j in a(n)for i in a(n)if L],[r(0,1)for i in a(n**2)]][L==0]);v.save(f'{n}.png')or n&lt;2or f(n//2,L)
 </code></pre>
+<p>-1 byte thanks to KevinCruijssen</p>
 <p><code>f</code> is a recursive function which inputs image size <code>n</code> a power of 2, and generates a list <code>L</code> of random <code>0,1</code> values if no <code>L</code> is provided, then runs itself again with <code>L</code> as an input and <code>n//2</code> as long as <code>n&gt;1</code>. If given an <code>L</code>, it checks the sum of every block of 4 pixels and creates a new smaller list <code>L</code> accordingly. Each call to <code>f</code> saves <code>L</code> as an <code>.png</code> with <code>PIL</code> before calling <code>f</code> again.</p>
 <p>Ungolfed:</p>
 
