--- a/q/275708.html
+++ b/q/275708.html
@@ -26,15 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>121</td><td>JavaScript ES6</td><td>240923T103031Z</td><td><a href="https://codegolf.stackexchange.com/questions/275708/what-kind-of-fibonacci-subword-at-this-offset/275719#275719">Arnauld</a></td></tr>
+<tr d-ix="0"><td>118</td><td>JavaScript ES6</td><td>240923T103031Z</td><td><a href="https://codegolf.stackexchange.com/questions/275708/what-kind-of-fibonacci-subword-at-this-offset/275719#275719">Arnauld</a></td></tr>
 <tr d-ix="1"><td>030</td><td>05AB1E</td><td>240923T095642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275708/what-kind-of-fibonacci-subword-at-this-offset/275718#275718">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 121 bytes</h1>
-<p>Expects <code>(N,n,o)</code> and returns <strong>0</strong> for <em>regular</em>, <strong>1</strong> for <em>strange</em>, <strong>3</strong> for <em>wrong</em>.</p>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 118 bytes</h1>
+<p>Expects <code>(N,n,o)</code> and returns <strong>0</strong> for <em>wrong</em>, <strong>2</strong> for <em>strange</em>, <strong>3</strong> for <em>regular</em>.</p>
 
-<pre class="lang-javascript prettyprint-override"><code>(N,n,o)=&gt;(g=(m,x=&quot;a&quot;,y=&quot;b&quot;,i)=&gt;i^N?g(m,~i+n?y:y=p=y.toUpperCase(),x+y,-~i):!x.slice(o).match(eval(`/^${p}/`+m)))``|g`i`*2
+<pre class="lang-javascript prettyprint-override"><code>(N,n,o)=&gt;(i=0,g=(x,y=&quot;b&quot;)=&gt;i++&lt;N?g(i-n?y:y=p=y.toUpperCase(),x+y):s=x.substr(o,p.length))`a`==p|2*(s.toUpperCase()==p)
 </code></pre>
-<p><a href="https://tio.run/##rdGxTsMwEAbgnacwEYNNrklst0StZDqwd2OtbIJrjBI7SkJpBPTVQ5ZWqlQFD6ynT/f/untXe9UWja27mfOvetiJAW/AgSfiERuBKziISEXQi@glAjtO7XazNuP8aGO37le9qEWfdP65rnXzpFqNCRziHmZHS1a3h6QtbaGxJ0mluuIN670qsUy3d1/1TyrjihAi5beRVt6zofCu9aVOSm/wDtMMEAOUI0QISlP02Xhnbi5NDghxQNnJNNp8lKq5rs6b2q5RzujrahmQR7OQPEonNtH5WAjQPJ/sdFbLAMX54v/UQ0jigvIARbPszzuwAMMDDOWTnzkpxgMU4yGKM3ahhl8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##rdG9bsIwFAXgvU9hMdnNJfgHGoFwGbqzdcdQ46aKbMsONJb67mkWkCKh1EPXq8/3HPl@qauKp1D7dm7dh@7Pssd7sOCIfMW1pGAk7iDJ2XE2TOqi2O53Btdzu0ubJL1MZevevdfhTUWNCXRFIpsouzJejrEN2IEvG21N@0nIQR2k9D/8Gcfxq2FK@pOz0TW6bJzBZ8woIA6oQogQtFig7@CseRqbChASgOjNBG0ujQqP1X3T0EpZox@rdUYeozl5jE1sYsuhEKBlNdnprtYZSojV/6mXnMQVExmKUfrnP/AMIzIME5OXuSkuMhQXOUpwPlL9Lw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 30 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>1ÝλN¹›i‚»ë«]¹I‚è`IF¦¶Û}Dþ‚sδÅ?
