--- a/q/275708.html
+++ b/q/275708.html
@@ -36,12 +36,13 @@
 </code></pre>
 <p><a href="https://tio.run/##rdG9bsIwFAXgvU9hsWA3l@AfaASqy9CdLROqhKHGTRXZlh3aROq7p1lAQkKph47X@nTP0fWn@lLxGCrfzKx71/1J9ngLFhyRL7iSFIzELXRycpgML1WWPW83Blczu@nWnfSy25Vy2rjSex1eVdTTN0ygzTqyjrLN4/kQm4Ad@LzW1jQfhOzVXkr/wx9x3JUDHgbSH52NrtZ57Qw@YUYBcUAFQoSg@Rx9B2fNw60pACEBiF5M0OZcq3BfXTcNZZQ1@r5aJeQxmpLH2MgmthgKAVoUo52uapWghFj@n3pKSVwykaAYpX/egScYkWCYGP2Zi@IiQXGRogTnN6r/BQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <h3>Method</h3>
-<p>Once the <span class="math-container">\$n\$</span>-th pattern is reached, we convert it to upper case and save it in <code>p</code>. All subsequent regular occurrences of <code>p</code> will appear in upper case as well.</p>
-<p>At the end of process:</p>
+<p>We recursively build all patterns up to <span class="math-container">\$N\$</span>, using <code>'a'</code> and <code>'b'</code>.</p>
+<p>Once the <span class="math-container">\$n\$</span>-th pattern is reached, we convert it to upper case and save it in <span class="math-container">\$p\$</span>. All subsequent regular occurrences of <span class="math-container">\$p\$</span> will appear in upper case as well.</p>
+<p>At the end of the process:</p>
 <ul>
-<li>If <code>p</code> appears at offset <code>o</code> in upper case, this is a <em>regular</em> match.</li>
-<li>If <code>p</code> appears at offset <code>o</code> with any mixed case, this is a <em>strange</em> match.</li>
-<li>If <code>p</code> doesn't appear at all at offset <code>o</code>, this is obviously <em>wrong</em>.</li>
+<li>If <span class="math-container">\$p\$</span> appears at offset <span class="math-container">\$o\$</span> in upper case, this is a <em>regular</em> match.</li>
+<li>If <span class="math-container">\$p\$</span> appears at offset <span class="math-container">\$o\$</span> in lower or mixed case, this is a <em>strange</em> match.</li>
+<li>If <span class="math-container">\$p\$</span> doesn't appear at all at offset <span class="math-container">\$o\$</span>, this is obviously <em>wrong</em>.</li>
 </ul>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 30 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
