--- a/q/275708.html
+++ b/q/275708.html
@@ -26,18 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>114</td><td>JavaScript ES6</td><td>240923T103031Z</td><td><a href="https://codegolf.stackexchange.com/questions/275708/what-kind-of-fibonacci-subword-at-this-offset/275719#275719">Arnauld</a></td></tr>
+<tr d-ix="0"><td>112</td><td>JavaScript ES6</td><td>240923T103031Z</td><td><a href="https://codegolf.stackexchange.com/questions/275708/what-kind-of-fibonacci-subword-at-this-offset/275719#275719">Arnauld</a></td></tr>
 <tr d-ix="1"><td>030</td><td>05AB1E</td><td>240923T095642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275708/what-kind-of-fibonacci-subword-at-this-offset/275718#275718">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 114 bytes</h1>
-<p>Expects <code>(N,n,o)</code> and returns <strong>0</strong> for <em>wrong</em>, <strong>2</strong> for <em>strange</em>, <strong>3</strong> for <em>regular</em>.</p>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 112 bytes</h1>
+<p>Expects <code>(N,n,o)</code> and returns <strong>false</strong> for <em>strange</em>, <strong>true</strong> for <em>regular</em>, <strong>2</strong> for <em>wrong</em>.</p>
 
-<pre class="lang-javascript prettyprint-override"><code>(N,n,o)=&gt;(i=0,g=(x,y=&quot;b&quot;)=&gt;i++&lt;N?g(i-n?y:y=p=y[U='toUpperCase'](),x+y):s=x.substr(o,p.length))`a`==p|2*(s[U]()==p)
+<pre class="lang-javascript prettyprint-override"><code>(N,n,o)=&gt;(i=0,g=(x,y=&quot;b&quot;)=&gt;i++&lt;N?g(i-n?y:y=p=y[U='toUpperCase'](),x+y):s=x.substr(o,p.length))`a`[U]()==p?s==p:2
 </code></pre>
-<p><a href="https://tio.run/##rdG9bsIwFAXgvU9hsWA3l@AfaASqy9CdLROqhKHGTRXZlh3aROq7p1lAQkKph47X@nTP0fWn@lLxGCrfzKx71/1J9ngLFhyRL7iSFIzELXRycpgML1WWPW83Blczu@nWnfSy25Vy2rjSex1eVdTTN0ygzTqyjrLN4/kQm4Ad@LzW1jQfhOzVXkr/wx9x3JUDHgbSH52NrtZ57Qw@YUYBcUAFQoSg@Rx9B2fNw60pACEBiF5M0OZcq3BfXTcNZZQ1@r5aJeQxmpLH2MgmthgKAVoUo52uapWghFj@n3pKSVwykaAYpX/egScYkWCYGP2Zi@IiQXGRogTnN6r/BQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##rdG9bsIwFAXgvU9hsWArJvgHGhH1NkN3tkyoEoYaN1VkW3Zok6dPs4CEhKiHLnewPt1zdP2lvlU8hsZ3C@s@9HiCEW@ppY7AK26AUQO4pwPMDrPppcmyl21lcLOw1VAO4GHY1TDvXO29Dm8q6vk7JrTPBlJG6PN4PsQuYEd93mpruk9C9mq/qycE4Ks4jVKMR2eja3XeOoNPmDOKBEUFQoSg5RL9BGfN060pKEKSInYxQZtzq8J9dd00VVHW6Ptqk5DHWUoe5w828dVUiKJV8bDTVW0SlJTr/1PPKYlrLhMUZ@zPO4gEIxMMlw9/5qKETFBCpigpxI0afwE" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <h3>Method</h3>
 <p>We recursively build all patterns up to <span class="math-container">\$N\$</span>, using <code>'a'</code> and <code>'b'</code>.</p>
-<p>Once the <span class="math-container">\$n\$</span>-th pattern is reached, we convert it to upper case and save it in <span class="math-container">\$p\$</span>. All subsequent regular occurrences of <span class="math-container">\$p\$</span> will appear in upper case as well.</p>
+<p>When the <span class="math-container">\$n\$</span>-th pattern is reached, we convert it to upper case and save it in <span class="math-container">\$p\$</span>. All subsequent regular occurrences of <span class="math-container">\$p\$</span> will appear in upper case as well.</p>
 <p>At the end of the process:</p>
 <ul>
 <li>If <span class="math-container">\$p\$</span> appears at offset <span class="math-container">\$o\$</span> in upper case, this is a <em>regular</em> match.</li>
