--- a/q/275700.html
+++ b/q/275700.html
@@ -26,13 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>016</td><td>Charcoal</td><td>240923T045516Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275704#275704">Neil</a></td></tr>
-<tr d-ix="1"><td>050</td><td>Python + NumPy</td><td>240923T070826Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275706#275706">Albert.L</a></td></tr>
-<tr d-ix="2"><td>113</td><td>Python</td><td>240923T042739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275703#275703">Unrelate</a></td></tr>
-<tr d-ix="3"><td>188</td><td>Python3</td><td>240923T015712Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275702#275702">Ajax1234</a></td></tr>
+<tr d-ix="0"><td>113</td><td>Python3</td><td>240923T015712Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275702#275702">Ajax1234</a></td></tr>
+<tr d-ix="1"><td>016</td><td>Charcoal</td><td>240923T045516Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275704#275704">Neil</a></td></tr>
+<tr d-ix="2"><td>050</td><td>Python + NumPy</td><td>240923T070826Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275706#275706">Albert.L</a></td></tr>
+<tr d-ix="3"><td>113</td><td>Python</td><td>240923T042739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275703#275703">Unrelate</a></td></tr>
 <tr d-ix="4"><td>008</td><td>Jelly</td><td>240923T011922Z</td><td><a href="https://codegolf.stackexchange.com/questions/275700/reorder-a-string-of-length-2n-by-permuting-the-n-binary-digits-of-every/275701#275701">Unrelate</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 16 bytes</h1>
+<div id="pu0" class="pu"><h1>Python3, 113 bytes</h1>
+<pre><code>lambda n,s,o:''.join(s[int(''.join(x for _,x in sorted([*zip(o,bin(j)[2:].zfill(n))])),2)]for j in range(len(s)))
+</code></pre>
+<p><a href="https://tio.run/##NYxBCoMwEEWvkl1myiAmborQk0QpikkbSSchurBePo2Lwt88Pu@l7/6O3N1TLu4xlDB95mUSTBvFXspmjZ5hM553@NMhXMziSYfwLLaYd7uAuZ0@QaS5/isa3Y/N6XwIwIgjImkcL2m9lDzxy0KwtYuIJeUr7qAjqVSr2jpJRlNLqprlBw" rel="nofollow noreferrer">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 16 bytes</h1>
 <pre><code>⭆θ§θΣＥη∧＆κＸ²μＸ²λ
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRCO4BEil@yYWaBTqKDiWeOalpFaAmMGluRog0QygaF6KhlNmSXlmcSqIma2jEJBfnlqkYaSjkKupicTL0YQA6///DQ0NDA2AiMvQyOC/blkOAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes <code>s</code> as the first input as a list or bitstring and <code>σ</code> as the second input as a list (or string if <code>n&lt;11</code>) of 0-indexed destination indices and outputs a bitstring. Explanation:</p>
@@ -56,7 +61,7 @@
 </code></pre>
 <p>(If you run this code on ATO instead of TIO then you can also pass <code>σ</code> as a dictionary mapping 0-indexed source indices to destination indices.)</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a> + NumPy, 50 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a> + NumPy, 50 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda a,p:a.reshape(len(p)*[2]).transpose(p).flat
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vweI025ilpSVpuhY3jXISc5NSEhUSdQqsEvWKUoszEgtSNXJS8zQKNLWijWI19UqKEvOKC_KLU4Eiemk5iSVQnd5pRfm5CnmluQWVCpm5BflFJQpF8VxciQq2QDraUMdQxwCODWK5CiDiRiCRWC6ugqLMvBINrTQNoMWamhAjFyyA0AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -64,19 +69,13 @@
 <h3>How?</h3>
 <p>Quite literal approach: Arranges the input sequence into a 2x2x...x2 hypercube, shuffles dimensions according to permutation, and flattens the result.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 113 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 113 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda s,p:[s[i]for i in g(range(len(s)),*p[::-1])]
 g=lambda s,h,*t:sorted(t and g(s,*t)or s,key=lambda i:i&gt;&gt;h&amp;1)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=PY1BCsIwFET3nuKvbFJ-oXElgfYiMYtIkzZY05jERc_ipiB6Dc_hbQxUhYGB4c3M7ennNExuuZvm8LgmU-3fl1Gdj52CiJ6LKKw0UwAL1kFPgnK9JqN2JFKKpRecV0xSuembf2vAMvE4haQ7kkC5LvdizmieiXjS8w-13LbtsGV0PX75YF0ihhSM1azOKhAEQ9gh1JJ-qWVZ_QM" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Definitely golfable and probably beatable by a more direct approach, but this one is just too much fun. (<code>2*&amp;ÞƒJ’$}‘ị</code> for 11 in Jelly--thanks 1-indexing...) Takes an <em>inverse</em> 0-indexed permutation list <span class="math-container">\$[\sigma^{-1}(0 ),...,\sigma^{-1}(n-1)]\$</span>, where the inverse is equivalently the grade-up. (<a href="https://ato.pxeger.com/run?1=PU5LCsIwEN17iqzsJKTQuJJAe5HYRaRpGqxpSNJFBU_ipiB6Dc_hbYy0CgMz7zNv5vZ0U-wGO9_b8vAYY5vv39deno-NRIE6LsjFOCBh8FE18J01eGm1gl5ZCBhT4gTnOasxTQjXgtUbXf4TOkoiX7cjkrZBGkLi8OCTelLTz2q4qapuy_DyxMt5YyO0kDFWsCJVRpHYUVRQlG6trnle-gc" rel="nofollow noreferrer">125 bytes if that's not allowed.</a>)</p>
 <p>Since <code>sorted</code> is stable, this sorts by each bit in permutation order, essentially &quot;bubbling&quot; that bit to most significant (w.r.t. the destination indices) before being &quot;pushed down&quot; by the next.</p>
-</div>
-<div id="pu3" class="pu"><h1>Python3, 188 bytes</h1>
-<pre><code>lambda n,s,o:[''.join(i)for i in product(*['10']*len(s))if all(s[int(''.join(x for _,x in sorted([*zip(o,bin(j)[2:].zfill(n))])),2)]==i[j]for j in range(len(s)))][0]
-from itertools import*
-</code></pre>
-<p><a href="https://tio.run/##Nc3BasMwEATQe79CN2nNEiTnUgL@ElUUp7aSNbJWSCqk@XlXggTmNryZ9FfvHM@fKR9@@jrCvF@XWUQsyBcr5WljiorAcxYkKIqUefn9qWqw0mjphrBGVQDIizkEVSzFqt7sITr7xkeHhXNdF2WHJyXFeG39Bna8uNPTU6MRwAHgCG6ayG6u063DPMfbql4/4Kx2Hz7zLqiuuTKHImhPbXw4Uu7vXp1RGqONbpFoR9Ro2vTxDw" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>9</s> 8 bytes</h1>
 <pre><code>ịⱮL2ṗɗỤị
