--- a/q/275708.html
+++ b/q/275708.html
@@ -26,55 +26,60 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>112</td><td>JavaScript ES6</td><td>240923T103031Z</td><td><a href="https://codegolf.stackexchange.com/questions/275708/what-kind-of-fibonacci-subword-at-this-offset/275719#275719">Arnauld</a></td></tr>
-<tr d-ix="1"><td>030</td><td>05AB1E</td><td>240923T095642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275708/what-kind-of-fibonacci-subword-at-this-offset/275718#275718">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>024</td><td>05AB1E</td><td>240923T095642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275708/what-kind-of-fibonacci-subword-at-this-offset/275718#275718">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 112 bytes</h1>
-<p>Expects <code>(N,n,o)</code> and returns <strong>false</strong> for <em>strange</em>, <strong>true</strong> for <em>regular</em>, <strong>2</strong> for <em>wrong</em>.</p>
-
-<pre class="lang-javascript prettyprint-override"><code>(N,n,o)=&gt;(i=0,g=(x,y=&quot;b&quot;)=&gt;i++&lt;N?g(i-n?y:y=p=y[U='toUpperCase'](),x+y):s=x.substr(o,p.length))`a`[U]()==p?s==p:2
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>30</s> 24 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>„abSλè«N²Qiu©]I.$Du‚®δÅ?
 </code></pre>
-<p><a href="https://tio.run/##rdG9bsIwFAXgvU9hsWArJvgHGhH1NkN3tkyoEoYaN1VkW3Zok6dPs4CEhKiHLnewPt1zdP2lvlU8hsZ3C@s@9HiCEW@ppY7AK26AUQO4pwPMDrPppcmyl21lcLOw1VAO4GHY1TDvXO29Dm8q6vk7JrTPBlJG6PN4PsQuYEd93mpruk9C9mq/qycE4Ks4jVKMR2eja3XeOoNPmDOKBEUFQoSg5RL9BGfN060pKEKSInYxQZtzq8J9dd00VVHW6Ptqk5DHWUoe5w828dVUiKJV8bDTVW0SlJTr/1PPKYlrLhMUZ@zPO4gEIxMMlw9/5qKETFBCpigpxI0afwE" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<h3>Method</h3>
-<p>We recursively build all patterns <span class="math-container">\$F_0\$</span> to <span class="math-container">\$F_N\$</span>, using <code>'a'</code> and <code>'b'</code>.</p>
-<p>When <span class="math-container">\$F_n\$</span> is reached, we convert it to upper case and save it in <span class="math-container">\$p\$</span>. All subsequent regular occurrences of <span class="math-container">\$p\$</span> will appear in upper case as well.</p>
-<p>At the end of the process, we look for <span class="math-container">\$p\$</span> at offset <span class="math-container">\$o\$</span> in <span class="math-container">\$F_N\$</span>:</p>
-<ul>
-<li>If <span class="math-container">\$p\$</span> appears in upper case, this is a <em>regular</em> match.</li>
-<li>If <span class="math-container">\$p\$</span> appears in lower or mixed case, this is a <em>strange</em> match.</li>
-<li>If <span class="math-container">\$p\$</span> doesn't appear at all, this is obviously <em>wrong</em>.</li>
-</ul>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 30 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<p>-6 bytes porting the uppercase approach of <a href="https://codegolf.stackexchange.com/a/275719/52210"><em>@Arnauld</em>'s JavaScript answer</a>.</p>
+<p>Inputs in the order <span class="math-container">\$N,n,o\$</span>. Outputs <code>[1,1]</code> for regular; <code>[0,1]</code> for strange; and <code>[0,0]</code> for wrong.</p>
+<p><a href="https://tio.run/##ATMAzP9vc2FiaWX//@KAnmFiU867w6jCq07CslFpdcKpXUkuJER14oCawq7OtMOFP///NgozCjc" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##S0oszvifnFiiYKeQnJ@SqpdfnJiUmapgY6Pg6u/GZa@k8KhtkoKSfUxCWKjS/0cN8xKTgs/tPrzi0Gq/iMDM0kMrYyP1YlRcSh81zDq07tyWw632/5X0wlzs/ZXKi/Lz0hWKS4oS89JTFYpS00tzEouUlIsPr1BS0Di8X1NJhwtkA1d5RmYOSD4xRSEzjysln0tBQT@/oEQf4hAoheY2GwUVsNq81P/RZjrGOkaxXGDaFEobGkAZ5lDaAkgbGkAFzIG0AZSG8S2htCFMwtAQpMVEx1zHxBzBsoQxjY1N4UwzuKipoTGMaWhgAGMaIZjGCCaSUiM408gYzjQ2AvoKAA" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<h3>Original 30 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a> answer:</h3>
 <pre><code>1ÝλN¹›i‚»ë«]¹I‚è`IF¦¶Û}Dþ‚sδÅ?
 </code></pre>
 <p>Inputs in the order <span class="math-container">\$n,N,o\$</span>. Outputs <code>[1,1]</code> for regular; <code>[0,1]</code> for strange; and <code>[0,0]</code> for wrong.</p>
 <p><a href="https://tio.run/##AUMAvP9vc2FiaWX//zHDnc67TsK54oC6aeKAmsK7w6vCq13CuUnigJrDqGBJRsKmwrbDm31Ew77igJpzzrTDhT///zMKNgo3" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##S0oszvifnFiiYKeQnJ@SqpdfnJiUmapgY6Pg6u/GZa@k8KhtkoKSfVBMQmjYoZUxMUr/DQ/PPbfbL@JRw67MRw2zDu0@vPrQ6tiISCD78IqYhEPr3A4tO7Tt8Oxal8P7gGLF57YcbrX/r6QX5mLvr1RelJ@XrlBcUpSYl56qUJSaXpqTWKSkXHx4hZKCxuH9mko6XCBrucozMnNA8okpCpl5XCn5XAoK@vkFJfoQ10EpNAfbKKiA1eal/o821jHTMYrlAtOmUNrQAMowh9IWQNoIKAwVMNcxgNIwviWUNoRJGBoCGUDKRMfEHMGyhDGNjU3hTDO4qKmhMYxpaGAAYxohmMYIJpJSIzjTyBjONDYC@goA" rel="nofollow noreferrer">verify all test cases</a>.</p>
 <p><strong>Explanation:</strong></p>
 
-<pre class="lang-python prettyprint-override"><code>  λ        # Create a recursive environment,
-           # to output the infinite sequence
-1Ý         # Starting with a(0)=0 and a(1)=1
-           # Where every following a(x) is calculated as:
-           #  (implicitly push the previous terms a(x-2) and a(x-1))
-   N¹›i    #  If x is larger than first input `n`:
-       ‚   #   Pair the two previous terms: [a(x-2),a(x-1)]
-        »  #   Join this pair with newline-delimiter
-      ë    #  Else:
-       «   #   Append term a(x-1) to a(x-2) instead
-  ]        # Close both the if-statement and recursive environment
-   ¹I‚     # Push a pair of the first two inputs: [n,N]
-      è    # (0-based) index those into the infinite list
-`          # Pop and push both separated to the stack
- IF        # Loop the third input `o` amount of times:
-   ¦       #  Remove the first bit
-    ¶Û     #  And also trim a potential leading newline character
-  }D       # After the loop: duplicate the off-set result
-    þ      # Remove all newlines from the copy, by only keeping digits
-     ‚     # Pair the two together
-       δ   # Map over this pair:
-      s Å? #  Check for both whether it starts with the n'th term
-           # (after which this pair is output implicitly as result)
+<pre class="lang-python prettyprint-override"><code>    λ           # Create a recursive environment,
+     è          # to output the first (implicit) input N'th term
+„abS            # Starting with a(0)=&quot;a&quot; and a(1)=&quot;b&quot;
+                # Where every following a(x) is calculated as:
+                #  (implicitly push the previous terms a(x-2) and a(x-1))
+      «         #  Append a(x-2) and a(x-1) together
+       N²Qi     #  If x equals the second input `n`:
+           u    #   Uppercase the current string
+            ©   #   And store this n'th term in variable `®` (without popping)
+    ]           # Close both the if-statement and recursive environment
+     I.$        # Remove the leading input `o` amount of chars from the N'th term
+        Du‚     # Pair it with an uppercase copy
+            δ   # Map over this pair:
+           s Å? #  Check for both whether it starts with the n'th term
+</code></pre>
+
+<pre class="lang-python prettyprint-override"><code>  λ             # Create a recursive environment,
+                # to output the infinite sequence
+1Ý              # Starting with a(0)=0 and a(1)=1
+                # Where every following a(x) is calculated as:
+                #  (implicitly push the previous terms a(x-2) and a(x-1))
+   N¹›i         #  If x is larger than first input `n`:
+       ‚        #   Pair the two previous terms: [a(x-2),a(x-1)]
+        »       #   Join this pair with newline-delimiter
+      ë         #  Else:
+       «        #   Append term a(x-1) to a(x-2) instead
+  ]             # Close both the if-statement and recursive environment
+   ¹I‚          # Push a pair of the first two inputs: [n,N]
+      è         # (0-based) index those into the infinite list
+`               # Pop and push both separated to the stack
+ IF             # Loop the third input `o` amount of times:
+   ¦            #  Remove the first bit
+    ¶Û          #  And also trim a potential leading newline character
+  }D            # After the loop: duplicate the off-set result
+    þ           # Remove all newlines from the copy, by only keeping digits
+     ‚          # Pair the two together
+       δ        # Map over this pair:
+      s Å?      #  Check for both whether it starts with the n'th term
+                # (after which this pair is output implicitly as result)
 </code></pre>
 </div>
 
