--- a/q/275708.html
+++ b/q/275708.html
@@ -26,9 +26,26 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>030</td><td>05AB1E</td><td>240923T095642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275708/what-kind-of-fibonacci-subword-at-this-offset/275718#275718">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>118</td><td>JavaScript ES6</td><td>240923T103031Z</td><td><a href="https://codegolf.stackexchange.com/questions/275708/what-kind-of-fibonacci-subword-at-this-offset/275719#275719">Arnauld</a></td></tr>
+<tr d-ix="1"><td>030</td><td>05AB1E</td><td>240923T095642Z</td><td><a href="https://codegolf.stackexchange.com/questions/275708/what-kind-of-fibonacci-subword-at-this-offset/275718#275718">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 30 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 118 bytes</h1>
+<p>Expects <code>(N,n,o)</code> and returns <strong>false</strong> for <em>strange</em>, <strong>true</strong> for <em>regular</em>, <strong>2</strong> for <em>wrong</em>.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>(N,n,o)=&gt;(i=1,g=(x,y=&quot;ab&quot;[i])=&gt;N+i--?g(i+n?y:y=p=y[U=&quot;toUpperCase&quot;](),x&amp;&amp;x+y):s=x.substr(o,p.length))()[U]()==p?s==p:2
+</code></pre>
+<p><a href="https://tio.run/##rdK9bsMgFAXgvU@BPEQgY8dAUiuWqIfu2TxZGUhKqCsLEDit/fQuQxqpP3IYujCgT@dcrngT78KfXGeHTJsXOZ/5DPdYY4P4E@w4wYrDEU88Ecek7Q7hdp92WVYr2KW6nqqJWz61DU8G01gr3bPwMjlAhMfVakwnVHk@5v5y9IODBtu8l1oNrwhB1DaBcW5rH46Kziejvell3hsFz5BiAAoMCgAQAus1cFJdeuEefiuCAVlWJAQFWX6pD2e0@mHKkMTu9l3VLSm8Smgl/1a7iD5SxPQRspBENmEgDDbl4kw3tYtQjG3/Tz3GNG4Ji1CkKO7ugUYYFmEIW/5TV0VZhKIsRjFKv6n5Ew" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<h3>Method</h3>
+<p>We recursively build all patterns <span class="math-container">\$F_0\$</span> to <span class="math-container">\$F_N\$</span>, using <code>'a'</code> and <code>'b'</code>.</p>
+<p>When <span class="math-container">\$F_n\$</span> is reached, we convert it to upper case and save it in <span class="math-container">\$p\$</span>. All subsequent regular occurrences of <span class="math-container">\$p\$</span> will appear in upper case as well.</p>
+<p>At the end of the process, we look for <span class="math-container">\$p\$</span> at offset <span class="math-container">\$o\$</span> in <span class="math-container">\$F_N\$</span>:</p>
+<ul>
+<li>If <span class="math-container">\$p\$</span> appears in upper case, this is a <em>regular</em> match.</li>
+<li>If <span class="math-container">\$p\$</span> appears in lower or mixed case, this is a <em>strange</em> match.</li>
+<li>If <span class="math-container">\$p\$</span> doesn't appear at all, this is obviously <em>wrong</em>.</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 30 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>1ÝλN¹›i‚»ë«]¹I‚è`IF¦¶Û}Dþ‚sδÅ?
 </code></pre>
 <p>Inputs in the order <span class="math-container">\$n,N,o\$</span>. Outputs <code>[1,1]</code> for regular; <code>[0,1]</code> for strange; and <code>[0,0]</code> for wrong.</p>
