--- a/q/275708.html
+++ b/q/275708.html
@@ -32,9 +32,9 @@
 <div id="pu0" class="pu"><h1>JavaScript (ES6), 118 bytes</h1>
 <p>Expects <code>(N,n,o)</code> and returns <strong>false</strong> for <em>strange</em>, <strong>true</strong> for <em>regular</em>, <strong>2</strong> for <em>wrong</em>.</p>
 
-<pre class="lang-javascript prettyprint-override"><code>(N,n,o)=&gt;(i=1,g=(x,y=&quot;ab&quot;[i])=&gt;N+i--?g(i+n?y:y=p=y[U=&quot;toUpperCase&quot;](),x&amp;&amp;x+y):s=x.substr(o,p.length))()[U]()==p?s==p:2
+<pre class="lang-javascript prettyprint-override"><code>(N,n,o)=&gt;(i=1,g=(x,y=&quot;ba&quot;[i])=&gt;N+i--?g(i+n?y:y=p=y[U=&quot;toUpperCase&quot;](),x&amp;&amp;x+y):s=x.substr(o,p.length))()[U]()==p?s==p:2
 </code></pre>
-<p><a href="https://tio.run/##rdK9bsMgFAXgvU@BPEQgY8dAUiuWqIfu2TxZGUhKqCsLEDit/fQuQxqpP3IYujCgT@dcrngT78KfXGeHTJsXOZ/5DPdYY4P4E@w4wYrDEU88Ecek7Q7hdp92WVYr2KW6nqqJWz61DU8G01gr3bPwMjlAhMfVakwnVHk@5v5y9IODBtu8l1oNrwhB1DaBcW5rH46Kziejvell3hsFz5BiAAoMCgAQAus1cFJdeuEefiuCAVlWJAQFWX6pD2e0@mHKkMTu9l3VLSm8Smgl/1a7iD5SxPQRspBENmEgDDbl4kw3tYtQjG3/Tz3GNG4Ji1CkKO7ugUYYFmEIW/5TV0VZhKIsRjFKv6n5Ew" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##rdK9bsMgFAXgvU@BPEQgY8dAUiuWqIfu2TxZGUhKqCsLEDit/fQuQxqpP3IYujCgT@dcrngT78KfXGeHTJsXOZ/5DPdYY4P4E@w4wYrDEU88OYqk7Q7hdp92WVYr2KW6nqqJWz61DU8G01gr3bPwMjlAhMfVakwnVHk@5v5y9IODBtu8l1oNrwhB1DaBcW5rH46Kziejvell3hsFz5BiAAoMCgAQAus1cFJdeuEefiuCAVlWJAQFWX6pD2e0@mHKkMTu9l3VLSm8Smgl/1a7iD5SxPQRspBENmEgDDbl4kw3tYtQjG3/Tz3GNG4Ji1CkKO7ugUYYFmEIW/5TV0VZhKIsRjFKv6n5Ew" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <h3>Method</h3>
 <p>We recursively build all patterns <span class="math-container">\$F_0\$</span> to <span class="math-container">\$F_N\$</span>, using <code>'a'</code> and <code>'b'</code>.</p>
 <p>When <span class="math-container">\$F_n\$</span> is reached, we convert it to upper case and save it in <span class="math-container">\$p\$</span>. All subsequent regular occurrences of <span class="math-container">\$p\$</span> will appear in upper case as well.</p>
