--- a/q/275708.html
+++ b/q/275708.html
@@ -67,7 +67,7 @@
   :                         // else:
     s =                     //   save in s and return ...
     x.substr(o, p.length)   //   ... the relevant slice of x
-)()                         // invoke g
+)()                         // invoke g with x and y undefined
 [U]() == p ?                // if the result in upper case matches p:
   s == p                    //   compare s with p (Boolean value)
 :                           // else:
