--- a/q/275590.html
+++ b/q/275590.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>2412</td><td>Zsh +ffplay</td><td>240923T094444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275717#275717">roblogic</a></td></tr>
+<tr d-ix="0"><td>2632</td><td>Zsh +ffplay</td><td>240923T094444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275717#275717">roblogic</a></td></tr>
 <tr d-ix="1"><td>324</td><td>JavaScript</td><td>240920T204734Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275664#275664">rougepie</a></td></tr>
 <tr d-ix="2"><td>174</td><td>C GCC using OSS</td><td>240921T162403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275674#275674">G. Sliep</a></td></tr>
 <tr d-ix="3"><td>320</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
@@ -37,15 +37,16 @@
 <tr d-ix="8"><td>290</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
 <tr d-ix="9"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +<a href="https://www.ffmpeg.org/ffplay.html" rel="nofollow noreferrer"><code>ffplay</code></a>, <sub><s>296</s></sub> 241 bytes x 2</h1>
-<pre class="lang-none prettyprint-override"><code>for z (79be 467b 79be 467b 0247 2469 37ae 59cg){W=
-for i ({0..3})for o (${(s::)z})W+=($[750*2**((16#${o/g/10}-28+12*i)/12.)])
-for q (${W:0:-1} ${(Oa)W})S=$S\between(t,$[p++]/5,$p/5)*$q+
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +<a href="https://www.ffmpeg.org/ffplay.html" rel="nofollow noreferrer"><code>ffplay</code></a>, <sub><s>296</s></sub> <sub><s>241</s></sub> 263 bytes x 2</h1>
+<pre class="lang-none prettyprint-override"><code>c()&lt;&lt;&lt;$[550*2**((16#$1-28+12*$2)/12.)]
+for z (79be 467b 79be 467b 0247 2469 37ae 59cg){W=
+for i ({0..3})for o (${(s::)z})W+=(`c ${o/g/10} $i`)
+for q ($W `c $z[1] 4` ${(Oa)W})S=$S\between(t,$[p++]/5,$p/5)*$q+
 };ffplay -f lavfi aevalsrc=&quot;'0.1*sin(2*PI*t*(${S%+}))'&quot;
 </code></pre>
-<p><a href="https://tio.run/##RY@9boMwFIX3PMVV6iq@dgDb4SdQ8QCdWomBIc1gkEmQUCABJSrIz05DO3Q7Z/i@ozP251k3te6hqrpGf6emPLdz1d5gBBrFhQE/jAr4T0L5ESg/jGEXaQNBXJ5wytPVgtRAJ@G6O4tLa4GSifZJgqPFnKeUHKJAMMUYpTJ8IVPrnTwprKP2XCpWoyeVi0f8VV0XOE9E4kgLT82HxtxilpLsqzDDw5gLHbbk0HF@9IIt6bwAGbnylX37@wFOBY2@VzVoc9dNfyvT9Ua4kvX1hSr2@c4G9lzIXrlF3Kzn@Qc" rel="nofollow noreferrer">Try it online!</a> <sub>adjusted by ear; frequencies from <code>ffplay</code> seemed a bit off</sub>
-<br><a href="https://tio.run/##RVBNj4IwEL37KyZsDW2Rj1aUgOEH7Gk38cDBNbGQVkkIIBA3K@lvZ4uaeJhk5r03M2/m3l8mUZWiB6XaSvylsrg0k2o6uAOO4lxCuI1yeGcBDyPg4TaGdSQkbOLiTMYsXQDMTSXgMfC8tSZz1QBGI@6ThNw1GY0EoE7RgW0/0Nj4Z58F2o0cxml5fJDKkGEYUE4pxqh2OSM@4x55spmT4lPblfWgwFp6TFmA1Ik8uBeM6h@wbYNoE/MlL1vX2UiWBInLNBhLX4JkmuxTC@2NIpfDr5Q1Hlbo0DrO0d@sUOtvCEVXx9q9JgHKFnr3fBK4CipxUyUIeRNV3xWpZQceo31ZY06/P@lAzcL90tGE2NY0/QM" rel="nofollow noreferrer">Debug version</a> <sub>produces expected note-numbers &amp; frequencies</sub>
-<br><sub><s><a href="https://tio.run/##NY89b4MwGIT3/AqLuoltwocdFwsCQ8ZOVGJgQEgx1FZIUCAhStUifjuBNp1Op3vf53Q/3WGUdSU7oHVby@9IlYdm1M0VVADtdVN/AouGYSj8QnFPFP/qMi4Y9/yNkOrNL/eAunhnRghm1HuBlSVyvJgpJ4B617bFgPt4SvtdAE@EB3zAII22z575YjPg2R0nR217ytNfGoyzY25SRqon8AImShq4gUUHAHsUS5xOrxHMOHcJIwQheLEYxQ5lNs6XyySCiVGo25dSZ3RbGzBrTTM3HLGGrSMwgdo0tsPibz6wNKjlXVdAqrusu2sZGSvXpqSrzoiRj3dyI1N/8moOGK@McXwA" rel="nofollow noreferrer" title="Zsh – Try It Online">Try it online!</a></s></sub></p>
+<p><a href="https://tio.run/##RY@9boMwFIX3PMVV6iq@dgDb4SdQ8QCdWomBIc1gkEmQUCABJSrIz05DO3Q7Z/i@ozP251k3te6hqrpGf6emPLdz1d5gBBrFhQE/jAr4T0L5ESg/jGEXaQNBXJ5wytPVgtRAJ@G6O4tLa4GSifZJgqPFnKeUHKJAMMUYpTJ8IVPrnTwprKP2XCpWoyeVi0f8VV0XOE9E4kgLT82HxtxilpLsqzDDw5gLHbbk0HF@9IIt6bwAGbnylX37@wFOBY2@VzVoc9dNfyvT9Ua4kvX1hSr2@c4G9lzIXrlF3Kzn@Qc" rel="nofollow noreferrer">Try it online!</a> <sub>Adjusted by ear; frequencies from <code>ffplay</code> seemed a bit off. Uses base of <code>550</code> instead of <code>440</code>.</sub>
+<br><a href="https://tio.run/##VdHdboIwFAfwe57ipNbYFvloRZkfPMCutsQLLhgJSFolIYBC3Abh2V3ZNNvu2p5z/v2l7ZrTLS3ytAGl6iL9DGR2qm4ZobvdDkee5zLBGCF8NcHcEk8mFwwL6nBh09hQ1QU6IP76IMFb@Qf4XbnC80F4qzUs/FTCcp0daR8G3yM5kN617cVAx10FBPek2WxoN9DeAFBBkgHuK@focHcAnCf6sL7kZasAR6PkUbP80ZPHb4CQ7pmo4A8Zl5bgDylAaAYkuaegqc0VAqwSagyGniL/C@P9XcRj8HSDBmnleVSGWqNA28hLSsOB7gOE97rhINt3KUvSznFUm2bsLOe4dpaU4bOJtsb4pA/5GHt3e/G9EupUY9j@fABYCor0qnJI5TUtmksWoJlrc9bkJRHs9Zm1TFP2U3OgdIYM@ZG3t9sX" rel="nofollow noreferrer">Debug version</a> <sub>produces expected note-numbers &amp; frequencies</sub>
+<br><sub><s><a href="https://tio.run/##NY89b4MwGIT3/AqLuoltwocdFwsCQ8ZOVGJgQEgx1FZIUCAhStUifjuBNp1Op3vf53Q/3WGUdSU7oHVby@9IlYdm1M0VVADtdVN/AouGYSj8QnFPFP/qMi4Y9/yNkOrNL/eAunhnRghm1HuBlSVyvJgpJ4B617bFgPt4SvtdAE@EB3zAII22z575YjPg2R0nR217ytNfGoyzY25SRqon8AImShq4gUUHAHsUS5xOrxHMOHcJIwQheLEYxQ5lNs6XyySCiVGo25dSZ3RbGzBrTTM3HLGGrSMwgdo0tsPibz6wNKjlXVdAqrusu2sZGSvXpqSrzoiRj3dyI1N/8moOGK@McXwA" rel="nofollow noreferrer" title="Zsh – Try It Online">296B</a></s> <s><a href="https://tio.run/##RY@9boMwFIX3PMVV6iq@dgDb4SdQ8QCdWomBIc1gkEmQUCABJSrIz05DO3Q7Z/i@ozP251k3te6hqrpGf6emPLdz1d5gBBrFhQE/jAr4T0L5ESg/jGEXaQNBXJ5wytPVgtRAJ@G6O4tLa4GSifZJgqPFnKeUHKJAMMUYpTJ8IVPrnTwprKP2XCpWoyeVi0f8VV0XOE9E4kgLT82HxtxilpLsqzDDw5gLHbbk0HF@9IIt6bwAGbnylX37@wFOBY2@VzVoc9dNfyvT9Ua4kvX1hSr2@c4G9lzIXrlF3Kzn@Qc" rel="nofollow noreferrer">241B</a></s> ... older versions that omitted the top <em>C<sub>7</sub></em></sub></p>
 <p><code>for z</code> grabs 4 pseudo-hex characters<br>
 <code>for i</code> and <code>for o</code> populate array <code>W</code> with 16 notes based on <code>z</code>; expressed as<br>
   note number: <code>n=$[16#${o/g/10}-7+12*i]</code>, combined with<br>
