--- a/q/275697.html
+++ b/q/275697.html
@@ -35,21 +35,21 @@
 <pre><code>t f y 5W=f iB ) hS )
 </code></pre>
 <p><a href="https://tio.run/##y00syfn/v0QhTaFSwTTcNk0h00lBUyEjWEHz/391j9SiVIXMYoX8vFSF1IrE3IKcVIXyzJIMBXOF4oLE5NRiPYXg1LLUPEV1LiMjAA" rel="nofollow noreferrer" title="MATL – Try It Online">Try it online!</a></p>
-<p>Spaces have no effect on the code, and can be placed anywhere.</p>
+<p>Spaces have no effect on the above code, and can be placed anywhere.</p>
 <h3>Explanation</h3>
-<pre><code>t     % Implicit input: string. Duplicate
-f     % Find: gives [1 2 ... L], where L is the string length
-y     % Push copy of the string
-5     % Push 5
-W     % Exponential with base 2: gives 32
-=     % Compare, element-wise. Gives true for spaces, false otherwise
-f     % Find: gives indices of spaces
-i     % Input: number
-B     % Convert to binary. Gives true/false for the bits (*)
-)     % Use as logical index. Gives the indices of spaces selected by (*)
-h     % Concatenate horizontally. Attaches these indices to the original [1 2 ... L]
-S     % Sort
-)     % Use as indices into the stting. Implicit display
+<pre><code>t    % Implicit input: string. Duplicate
+f    % Find: gives [1 2 ... L], where L is the string length
+y    % Push another copy of the string
+5    % Push 5
+W    % Exponential with base 2: gives 32
+=    % Compare, element-wise. Gives true for spaces, false otherwise
+f    % Find: gives indices of spaces
+i    % Input: number
+B    % Binary expansion. Gives true/false for the bits
+)    % Use as logical index. Gives indices of spaces selected by the binary expansion
+h    % Concatenate horizontally. Attaches those indices to the original [1 2 ... L]
+S    % Sort
+)    % Use as indices into the stting. Implicit display
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 33 bytes</h1>
